@@ -16,6 +16,7 @@
     + Added compressed actions dropdown;
     + SNMP module no longer requires MIB files;
     + Performance enhancements running under Azure/Amazon;
+    + Added option to disable user (#1327)
     + Rack module enhancements (#1325):
         + Dynamic rack sizes;
         + Top-down / Bottom-up racks;
